sonarqube/k8s/sonar-netpolicy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: sonarqube-nacl
spec:
  podSelector:
    matchLabels:
      app: sonarqube
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - ipBlock:
        cidr: 192.168.0.0/16
        except:
          - 192.168.70.0/24
      - ports:
        - protocol: TCP
        - port: 80
      - ports:
        - protocol: TCP
        - port: 443
